--- a/release-notes.html
+++ b/release-notes.html
@@ -1,24 +1,24 @@
-<b>Version 3.4</b>
+<b>Version 3.5</b>
 
-FiltaQuilla is now compatible with Thunderbird 91. FiltaQuilla had to have some necessary changes for Thunderbird 91, for instance the filteraction "match" function has been replace with "matchAction" and changed parameters.
+FiltaQuilla is now compatible with Thunderbird 102. FiltaQuilla had to have some necessary changes for Thunderbird 102, especially custom search terms and actions could not be edited anymore.
 
-I will try to keep the latest version on ATN compatible with both Thunderbird 78 and ESR 91 as long as possible.
+I will try to keep the latest version on ATN compatible with both Thunderbird 91 and ESR 102 as long as possible.
 
 If you would like to support FiltaQuilla with donation you can now <a href="https://quickfilters.quickfolders.org/filtaquilla.html#donate">do so here</a>
 
-<b>Bug Fixes</b>
-<ul>
-<li></li>
-</ul>
-
 <b>Improvements</b>
 <ul>
-<li><a href="https://github.com/RealRaven2000/FiltaQuilla/issues/126">[issue 126]</a> Add ability to archive messages from filters</li>
-<li><a href="https://github.com/RealRaven2000/FiltaQuilla/issues/152">[issue 152]</a> Support printing via PrintingTools NG by Christopher Leidigh.</li>
-<li><a href="https://github.com/RealRaven2000/FiltaQuilla/issues/153">[issue 153]</a> Implement new filter action "Forward with SmartTemplate" and "Reply with SmartTemplate". <a href="https://addons.thunderbird.net/thunderbird/addon/smarttemplate4/"> SmartTemplates</a> adds a plethora of functionality, such as replacing  text or quote headers from the quoted email and also adding / removing recipients and cleaning subject lines.
-Works from SmartTemplates version 3.11 forward.
-</li>
-<li><a href="https://github.com/RealRaven2000/FiltaQuilla/issues/102">[issue 102]</a> Run Program: New option to transmit parameters as UTF-16 format in order to correctly submit non-latin characters such as cyrillic.</li>
+<li>Added help topics for reply with / forward with SmartTemplates</li>
+</ul>
+
+<b>Bug Fixes</b>
+<ul>
+<li><a href="https://github.com/RealRaven2000/FiltaQuilla/issues/167">[issue 167]</a>  Fixed: Playback of sounds not working in Thunderbird - Replaced sounds with ogg format. Thunderbird cannot play back mp3 files natively, please use the provided ogg files instead.
+
+You can convert your own sound files to ogg with the Software <a href="https://www.freac.org/">freac (Free Audio Converter)</a></li>
+<li><a href="https://github.com/RealRaven2000/FiltaQuilla/issues/164">[issue 164]</a> Fixed: Edit fields for search terms / actions not displayed in Thunderbird 102 when dialog loads</li>
+<li>Raised minimum version to 91.0</li>
+<li>Improved Icon coloring for file pickers in filter editor - these now support dark themes in Thunderbird 102.</li>
 </ul>
 
 <strong>Support My Work</strong>
