--- a/release-notes.html
+++ b/release-notes.html
@@ -1,6 +1,7 @@
 <b>Version 3.5</b>
 
-FiltaQuilla is now compatible with Thunderbird 102. FiltaQuilla had to have some necessary changes for Thunderbird 102, especially custom search terms and actions could not be edited anymore.
+FiltaQuilla is now compatible with Thunderbird 102. FiltaQuilla had to have some necessary changes for Thunderbird 102, especially custom search terms and actions could not be edited anymore. If you find any new problems, related to the update to ESR102, please report them at <a href="https://github.com/RealRaven2000/FiltaQuilla/issues"> the FiltaQuilla issue tracker</a>
+
 
 I will try to keep the latest version on ATN compatible with both Thunderbird 91 and ESR 102 as long as possible.
 
