--- a/release-notes.html
+++ b/release-notes.html
@@ -1,4 +1,4 @@
-<b>Version 3.5</b>
+<b>Version 3.6</b>
 
 FiltaQuilla is now compatible with Thunderbird 102. FiltaQuilla had to have some necessary changes for Thunderbird 102, especially custom search terms and actions could not be edited anymore. If you find any new problems, related to the update to ESR102, please report them at <a href="https://github.com/RealRaven2000/FiltaQuilla/issues"> the FiltaQuilla issue tracker</a>
 
@@ -10,16 +10,16 @@ If you would like to support FiltaQuilla with donation you can now <a href="http
 <b>Improvements</b>
 <ul>
 <li>Added help topics for reply with / forward with SmartTemplates</li>
+<li><a href="https://github.com/RealRaven2000/FiltaQuilla/issues/165">[issue 165]</a> Support printing the same email multiple times </li>
 </ul>
 
 <b>Bug Fixes</b>
 <ul>
-<li><a href="https://github.com/RealRaven2000/FiltaQuilla/issues/167">[issue 167]</a>  Fixed: Playback of sounds not working in Thunderbird - Replaced sounds with ogg format. Thunderbird cannot play back mp3 files natively, please use the provided ogg files instead.
-
-You can convert your own sound files to ogg with the Software <a href="https://www.freac.org/">freac (Free Audio Converter)</a></li>
-<li><a href="https://github.com/RealRaven2000/FiltaQuilla/issues/164">[issue 164]</a> Fixed: Edit fields for search terms / actions not displayed in Thunderbird 102 when dialog loads</li>
-<li>Raised minimum version to 91.0</li>
-<li>Improved Icon coloring for file pickers in filter editor - these now support dark themes in Thunderbird 102.</li>
+<li>Fixed <a href="https://github.com/RealRaven2000/FiltaQuilla/issues/177">[issue 177]</a> Attachments with illegal filenames are not saved correctly
+</li>
+<li>Fixed <a href="https://github.com/RealRaven2000/FiltaQuilla/issues/135">[issue 135]</a> Action of "Detach Attachments To" doesn't detach from message (only saves attachments)
+</li>
+<li>Fixed <a href="https://github.com/RealRaven2000/FiltaQuilla/issues/178">[issue 178]</a> Subject or Body (Regular expression) - missing Textbox </li>
 </ul>
 
 <strong>Support My Work</strong>
