issue #216 - file name whitelist

--- a/release-notes.html
+++ b/release-notes.html
@@ -1,25 +1,23 @@
-<b>Version 3.6</b>
+<b>Version 3.7</b>
 
-FiltaQuilla is now compatible with Thunderbird 102. FiltaQuilla had to have some necessary changes for Thunderbird 102, especially custom search terms and actions could not be edited anymore. If you find any new problems, related to the update to ESR102, please report them at <a href="https://github.com/RealRaven2000/FiltaQuilla/issues"> the FiltaQuilla issue tracker</a>
+FiltaQuilla is now compatible with Thunderbird 110. FiltaQuilla had to have some necessary changes for Thunderbird 102, especially custom search terms and actions could not be edited anymore. If you find any new problems, related to the update to ESR102, please report them at <a href="https://github.com/RealRaven2000/FiltaQuilla/issues"> the FiltaQuilla issue tracker</a>
 
 
-I will try to keep the latest version on ATN compatible with both Thunderbird 91 and ESR 102 as long as possible.
+I will try to keep the latest version on ATN compatible with both Thunderbird 91 and  102 as long as possible.
 
 If you would like to support FiltaQuilla with donation you can now <a href="https://quickfilters.quickfolders.org/filtaquilla.html#donate">do so here</a>
 
+
 <b>Improvements</b>
 <ul>
-<li>Added help topics for reply with / forward with SmartTemplates</li>
-<li><a href="https://github.com/RealRaven2000/FiltaQuilla/issues/165">[issue 165]</a> Support printing the same email multiple times </li>
+<li><a href="https://github.com/RealRaven2000/FiltaQuilla/issues/219">[issue 216]</a> Allow special characters in file name, e.g. German Umlauts. So far most special characters in saved messages and attachments were automatially converted to phonetically similar ASCII characters to avoid file errors. You can now re-add letters that you want to preserve and you know that they work on your file system.
+
+This is achieved via a whitelist, which you can now enter on the actions tab</li>
 </ul>
 
 <b>Bug Fixes</b>
 <ul>
-<li>Fixed <a href="https://github.com/RealRaven2000/FiltaQuilla/issues/177">[issue 177]</a> Attachments with illegal filenames are not saved correctly
-</li>
-<li>Fixed <a href="https://github.com/RealRaven2000/FiltaQuilla/issues/135">[issue 135]</a> Action of "Detach Attachments To" doesn't detach from message (only saves attachments)
-</li>
-<li>Fixed <a href="https://github.com/RealRaven2000/FiltaQuilla/issues/178">[issue 178]</a> Subject or Body (Regular expression) - missing Textbox </li>
+<li><a href="https://github.com/RealRaven2000/FiltaQuilla/issues/180">[issue 180]</a> Fix Archiving with Thunderbird 102.</li>
 </ul>
 
 <strong>Support My Work</strong>
