issue #217 - print regression

--- a/release-notes.html
+++ b/release-notes.html
@@ -1,4 +1,4 @@
-<b>Version 3.7</b>
+<b>Version 3.7.1</b>
 
 FiltaQuilla is now compatible with Thunderbird 110. FiltaQuilla had to have some necessary changes for Thunderbird 102, especially custom search terms and actions could not be edited anymore. If you find any new problems, related to the update to ESR102, please report them at <a href="https://github.com/RealRaven2000/FiltaQuilla/issues"> the FiltaQuilla issue tracker</a>
 
@@ -18,6 +18,8 @@ This is achieved via a whitelist, which you can now enter on the actions tab</li
 <b>Bug Fixes</b>
 <ul>
 <li><a href="https://github.com/RealRaven2000/FiltaQuilla/issues/180">[issue 180]</a> Fix Archiving with Thunderbird 102.</li>
+<li><a href="https://github.com/RealRaven2000/FiltaQuilla/issues/217">[issue 217]</a> Fixed a regression in 3.7.1 that broke the printing action.</li>
+
 </ul>
 
 <strong>Support My Work</strong>
