--- a/release-notes.html
+++ b/release-notes.html
@@ -1,24 +1,22 @@
-<b>Version 3.7.1</b>
+<b>Version 4.0b2</b>
 
-FiltaQuilla is now compatible with Thunderbird 110. FiltaQuilla had to have some necessary changes for Thunderbird 102, especially custom search terms and actions could not be edited anymore. If you find any new problems, related to the update to ESR102, please report them at <a href="https://github.com/RealRaven2000/FiltaQuilla/issues"> the FiltaQuilla issue tracker</a>
+First official Beta release for Thunderbird 115. FiltaQuilla had to have some necessary changes for Thunderbird 115, especially custom search terms and actions could not be edited anymore. If you find any new problems, related to the update to ESR115, please report them at <a href="https://github.com/RealRaven2000/FiltaQuilla/issues/223"> FiltaQuilla issue 223</a>
 
 
-I will try to keep the latest version on ATN compatible with both Thunderbird 91 and  102 as long as possible.
+All new development for Thunderbird 115 will be published in as new branch of FiltaQuilla code, starting with a new major version number 4.*.
 
 If you would like to support FiltaQuilla with donation you can now <a href="https://quickfilters.quickfolders.org/filtaquilla.html#donate">do so here</a>
 
 
 <b>Improvements</b>
 <ul>
-<li><a href="https://github.com/RealRaven2000/FiltaQuilla/issues/219">[issue 216]</a> Allow special characters in file name, e.g. German Umlauts. So far most special characters in saved messages and attachments were automatially converted to phonetically similar ASCII characters to avoid file errors. You can now re-add letters that you want to preserve and you know that they work on your file system.
-
-This is achieved via a whitelist, which you can now enter on the actions tab</li>
+<li><a href="https://github.com/RealRaven2000/FiltaQuilla/issues/223">[issue 223]</a> Make FiltaQuilla compatible with Thunderbird 115.</li>
 </ul>
 
 <b>Bug Fixes</b>
 <ul>
-<li><a href="https://github.com/RealRaven2000/FiltaQuilla/issues/180">[issue 180]</a> Fix Archiving with Thunderbird 102.</li>
-<li><a href="https://github.com/RealRaven2000/FiltaQuilla/issues/217">[issue 217]</a> Fixed a regression in 3.7.1 that broke the printing action.</li>
+<li>Fixed ToneQuilla.jsm component (playback of sounds) by adding a background page. tested wav, ogg and mp3 playback.</li>
+<li>Fixed updating version display in top panel of options screen (remove old version Proxy code)</li>
 
 </ul>
 
