--- a/release-notes.html
+++ b/release-notes.html
@@ -1,23 +1,28 @@
-<b>Version 4.0b2</b>
+<b>Version 4.0</b>
 
-First official Beta release for Thunderbird 115. FiltaQuilla had to have some necessary changes for Thunderbird 115, especially custom search terms and actions could not be edited anymore. If you find any new problems, related to the update to ESR115, please report them at <a href="https://github.com/RealRaven2000/FiltaQuilla/issues/223"> FiltaQuilla issue 223</a>
-
-
-All new development for Thunderbird 115 will be published in as new branch of FiltaQuilla code, starting with a new major version number 4.*.
+FiltaQuilla had to have some necessary changes for Thunderbird 115, especially custom search terms and actions could not be edited anymore. If you find any new problems, related to the update to ESR115, please report them at <a href="https://github.com/RealRaven2000/FiltaQuilla/issues/223"> FiltaQuilla issue 223</a>
 
 If you would like to support FiltaQuilla with donation you can now <a href="https://quickfilters.quickfolders.org/filtaquilla.html#donate">do so here</a>
 
 
 <b>Improvements</b>
 <ul>
-<li><a href="https://github.com/RealRaven2000/FiltaQuilla/issues/223">[issue 223]</a> Make FiltaQuilla compatible with Thunderbird 115.</li>
+<li>Added @FOLDERNAME@  parameter to run program action <a href="https://github.com/RealRaven2000/FiltaQuilla/issues/234">[issue 234]</a> Make FiltaQuilla compatible with Thunderbird 115.</li>
+<li>Increased max version to 2122.* for beta users</li>
 </ul>
 
 <b>Bug Fixes</b>
 <ul>
-<li>Fixed ToneQuilla.jsm component (playback of sounds) by adding a background page. tested wav, ogg and mp3 playback.</li>
-<li>Fixed updating version display in top panel of options screen (remove old version Proxy code)</li>
+<li>Archiving action is working again.<a href="https://github.com/RealRaven2000/FiltaQuilla/issues/241">[issue 241]</a></li>
+<li>Repaired tag by thread (Thunderbird renamed function GetThreadContainingMsgHdr)</li>
+<li>replace deprecated  Components.utils.import with ChromeUtils.import. Future work should switch it to an ES module and use ChromeUtils.importESModule. </li>
+<li>Reading files (beta 122): replace deprecated FileUtils.getFile with IOUtils. See [Bug 920187]</li>
+</ul>
 
+<b>Miscellaneus / Code Modernisation</b>
+<ul>
+<li>Replaced deprecated Components.utils.import with ChromeUtils.import</li>
+<li>Use globalThis.Services where it is present</li>
 </ul>
 
 <strong>Support My Work</strong>
