--- a/release-notes.html
+++ b/release-notes.html
@@ -7,8 +7,9 @@ If you would like to support FiltaQuilla with donation you can now <a href="http
 
 <b>Improvements</b>
 <ul>
-<li>Added @FOLDERNAME@  parameter to run program action <a href="https://github.com/RealRaven2000/FiltaQuilla/issues/234">[issue 234]</a> Make FiltaQuilla compatible with Thunderbird 115.</li>
-<li>Increased max version to 2122.* for beta users</li>
+<li>Added @FOLDERNAME@  parameter to run program action <a href="https://github.com/RealRaven2000/FiltaQuilla/issues/234">[issue 234]</a></li>
+<li>Increased max version to 125.* for beta users</li>
+<li>Fixed opening files from filter editor for play sound action. </li>
 </ul>
 
 <b>Bug Fixes</b>
