--- a/release-notes.html
+++ b/release-notes.html
@@ -7,6 +7,7 @@ If you would like to support FiltaQuilla with donation you can now <a href="http
 
 <b>Improvements</b>
 <ul>
+  <li>Made FiltaQuilla compatible with Thunderbird 128. <a href="https://github.com/RealRaven2000/FiltaQuilla/issues/265">[issue 262]</a></li>
   <li>Some improvements during bodyMimeMatch.</li>
   <li>Added German UI for SmartTemplates.</li>
 </ul>
@@ -14,7 +15,7 @@ If you would like to support FiltaQuilla with donation you can now <a href="http
 <b>Bug Fixes</b>
 <ul>
   <li>Fixed file picker which was broken in Thunderbird 125 - <a href="https://github.com/RealRaven2000/FiltaQuilla/issues/265">[issue 265]</a></li>
-  <li>Fixed an isseu during play sound - Init window during tone playing if it is not set.<a href="https://github.com/RealRaven2000/FiltaQuilla/issues/258">[issue 258]</a></li>
+  <li>Fixed an issue during play sound - Init window during tone playing if it is not set.<a href="https://github.com/RealRaven2000/FiltaQuilla/issues/258">[issue 258]</a></li>
 </ul>
 
 <b>Miscellaneus / Code Modernisation</b>
