--- a/release-notes.html
+++ b/release-notes.html
@@ -1,4 +1,4 @@
-<b>Version 4.1</b>
+<b>Version 4.2</b>
 
 FiltaQuilla had to have some necessary changes for Thunderbird 128, especially custom search terms and actions could not be edited anymore. If you find any new problems, related to the update to ESR128, please report them at the <a href="https://github.com/RealRaven2000/FiltaQuilla/issues"> FiltaQuilla Github</a>
 
@@ -7,23 +7,15 @@ If you would like to support FiltaQuilla with donation you can now <a href="http
 
 <b>Improvements</b>
 <ul>
-  <li>Made FiltaQuilla compatible with Thunderbird 128. <a href="https://github.com/RealRaven2000/FiltaQuilla/issues/265">[issue 262]</a></li>
-  <li>Some improvements during bodyMimeMatch.</li>
-  <li>Added German UI for SmartTemplates.</li>
+  <li>Made compatible with Thunderbird 130.</li>
 </ul>
 
 <b>Bug Fixes</b>
 <ul>
-  <li>Fixed file picker which was broken in Thunderbird 125 - <a href="https://github.com/RealRaven2000/FiltaQuilla/issues/265">[issue 265]</a></li>
-  <li>Fixed an issue during play sound - Init window during tone playing if it is not set.<a href="https://github.com/RealRaven2000/FiltaQuilla/issues/258">[issue 258]</a></li>
+  <li>Filter with "Save message as File" action fails to run - <a href="https://github.com/RealRaven2000/FiltaQuilla/issues/270">[issue 270]</a></li>
+  <li>Body RegExp Match doesn't work.<a href="https://github.com/RealRaven2000/FiltaQuilla/issues/269">[issue 269]</a></li>
 </ul>
 
-<b>Miscellaneus / Code Modernisation</b>
-<ul>
-  <li>Added debug info for bodyRegEx_match, subjectRegEx_match and headerRegEx_match</li>
-  <li>Added troubleshooting info for NetUtil.readInputStreamToString</li>
-  <li>Added debug switch "mimeBody" for issues related to reading body of the emnail</li>
-</ul>
 
 <strong>Support My Work</strong>
 
